SERVER-22473 Return error status when parsing GeoNear exrpession instead of exception